Initialize the main RunLoop in iOS WebKitLegacy https://bugs.webkit.org/show_bug.cgi?id=167953

Patch by Joseph Pecoraro <pecoraro@apple.com> on 2017-02-08
Reviewed by Alexey Proskuryakov.

* platform/ios/wak/WebCoreThread.mm:
(StartWebThread):
Initialize the main runloop on the main thread during iOS WebKit initialization.

Canonical link: https://commits.webkit.org/185030@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@211890 268f45cc-cd09-0410-ab3c-d52691b4dbfc